--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,12 @@ authors = [
     {name = "Louis Maddox", email = "louismmx@gmail.com"},
 ]
 dependencies = [
-    "tree-sitter==0.20.1",
     "termcolor==2.3.0",
+    "tree-sitter>=0.22.3",
     "tree-sitter-python>=0.21.0",
     "tree-sitter-rust>=0.21.2",
 ]
-requires-python = ">=3.11,<3.12"
+requires-python = ">=3.10"
 readme = "README.md"
 license = {text = "MIT"}
 
@@ -22,3 +22,6 @@ build-backend = "pdm.backend"
 
 [tool.pdm]
 distribution = true
+
+[project.scripts]
+tsutil = "tsutil.main:main"
